--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Roboto:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../src/styles/dashboard.css">
+    <link rel="stylesheet" href="/src/styles/dashboard.css">
 </head>
 <body>
     <!-- Sidebar Navigation -->
@@ -935,7 +935,7 @@
             </div>
         </div>
 
-        <script src="../src/scripts/dashboard.js"></script>
+        <script type="module" src="/src/scripts/dashboard.js"></script>
     </main>
 </body>
 </html>
