fix: collapsible bar fixed

--- a/index.html
+++ b/index.html
@@ -303,7 +303,8 @@
             </div>
         </div>
 
-        <script type="module" src="/src/scripts/dashboard.js"></script>
+        <script src="/src/scripts/shared-utils.js"></script>
+        <script src="/src/scripts/dashboard.js"></script>
     </main>
 </body>
 </html>
