--- a/market-study.html
+++ b/market-study.html
@@ -245,8 +245,9 @@
             </div>
         </div>
 
-        <script type="module" src="/src/scripts/dashboard.js"></script>
-        <script type="module" src="/src/scripts/market-study.js"></script>
+        <script src="/src/scripts/shared-utils.js"></script>
+        <script src="/src/scripts/dashboard.js"></script>
+        <script src="/src/scripts/market-study.js"></script>
     </main>
 </body>
 </html>
