--- a/projects-table.html
+++ b/projects-table.html
@@ -293,8 +293,9 @@
             </div>
         </div>
 
-        <script type="module" src="/src/scripts/dashboard.js"></script>
-        <script type="module" src="/src/scripts/projects-table.js"></script>
+        <script src="/src/scripts/shared-utils.js"></script>
+        <script src="/src/scripts/dashboard.js"></script>
+        <script src="/src/scripts/projects-table.js"></script>
     </main>
 </body>
 </html>
